fixing logo size on mobile mode

--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -137,3 +137,10 @@
     border-radius: 25px;
    }
  }
+
+ @media (max-width: 430px) {
+  .logo-spc {
+    width: 250px;
+    height:125px;
+  }
+ }
